Criação do CRUD Incompleto

--- a/AspNetCoreCCCapitulo2/AspNetCoreCCCapitulo2/appsettings.json
+++ b/AspNetCoreCCCapitulo2/AspNetCoreCCCapitulo2/appsettings.json
@@ -1,8 +1,14 @@
 ﻿{
-  "Logging": {
-    "IncludeScopes": false,
-    "LogLevel": {
-      "Default": "Warning"
+  "ConnectionStrings": {
+
+    "IESConnection": 
+      "Server=(localdb)\\mssqllocaldb;Database=IES;Trusted_Connection=True;MultipleActiveResultSets=true"
+
+  },
+    "Logging": {
+      "IncludeScopes": false,
+      "LogLevel": {
+        "Default": "Warning"
+      }
     }
   }
-}
